<resources>
    <string name="app_name">SOPTHub</string>
    <string name="github_id">깃허브 아이디</string>
    <string name="sopt_hub">SOPTHub</string>
    <string name="pw">비밀번호</string>
    <string name="id_input">깃허브 아이디를 입력해주세요.</string>
    <string name="pw_input">비밀번호를 입력해주세요.</string>
    <string name="login">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="name">이름</string>
    <string name="name_input">이름을 입력해주세요.</string>
    <string name="age">나이</string>
    <string name="mbti">MBTI</string>
    <string name="kang">SuHyeon Kang</string>
    <string name="age23">23</string>
    <string name="intp">INTP</string>
    <string name="my_story">안녕하세요! 반갑습니다.</string>
    <string name="follower">팔로워 목록</string>
    <string name="repository">레포지토리 목록</string>
    <string name="detail_title">상세 소개</string>
    <string name="profile">프로필</string>
    <string name="home">홈</string>
    <string name="camera">카메라</string>
    <string name="onpyeong">onpyeong</string>
    <string name="short_intro">왕초보 개발자 강수현</string>
    <string name="github">GitHub</string>
    <string name="prepare">준비중입니다</string>
    <string name="test">안녕하세요! 반갑습니다안녕하세요! 반갑습니다</string>
    <string name="guide">사진을 첨부해주세요</string>
    <string name="attach">첨부하기</string>
    <string name="next">다음으로</string>
    <string name="start">시작하기</string>
    <string name="welcome_message">SOPTHub에 오신걸\n환영합니다!</string>
    <string name="happy_time_message">SOPTHub에서 즐거운 시간\n보내시길 바랍니다!</string>
    <string name="start_message">SOPTHub를\n시작해 볼까요?</string>
    <string name="auto_login">자동로그인</string>
    <string name="setting">환경설정</string>
    <string name="remove_auto_login">자동로그인 해제</string>
    <string name="onboarding">온보딩</string>
    <string name="first_fragment">첫 번째 화면</string>
    <string name="second_fragment">두 번째 화면</string>
    <string name="third_fragment">세 번째 화면</string>
</resources>