<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/sopt_hub"
        android:textColor="@color/sopt_orange"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="@id/tv_logo"
        app:layout_constraintStart_toStartOf="@id/tv_logo"
        app:layout_constraintTop_toBottomOf="@+id/tv_logo" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/iv_profile"
        app:layout_constraintStart_toStartOf="@id/iv_profile"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/tv_name_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_name"
        app:layout_constraintStart_toEndOf="@id/tv_name"
        android:text="@string/kang"
        android:layout_marginStart="28dp"/>

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/tv_age_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_age"
        app:layout_constraintStart_toEndOf="@id/tv_age"
        android:text="@string/age23"
        android:layout_marginStart="28dp"/>

    <TextView
        android:id="@+id/tv_mbti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mbti"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_age"
        app:layout_constraintStart_toStartOf="@id/tv_age"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/tv_mbti_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_mbti"
        app:layout_constraintStart_toEndOf="@id/tv_mbti"
        android:text="@string/intp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/tv_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_mbti"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/my_story"
        android:layout_marginTop="30dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>