<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.user.SignInActivity">

        <ImageView
            android:id="@+id/tv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:src="@drawable/img_github"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/github_id"
            android:textColor="@color/sopt_black"
            android:textSize="14sp"
            android:fontFamily="@font/noto_sans_kr_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_logo" />

        <EditText
            android:id="@+id/et_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/selector_user_input"
            android:hint="@string/id_input"
            android:paddingVertical="12dp"
            android:textSize="14sp"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:paddingStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_id"
            app:layout_constraintTop_toBottomOf="@id/tv_id" />

        <TextView
            android:id="@+id/tv_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:text="@string/pw"
            android:textColor="@color/sopt_black"
            android:textSize="14sp"
            android:fontFamily="@font/noto_sans_kr_bold"
            app:layout_constraintStart_toStartOf="@id/et_id"
            app:layout_constraintTop_toBottomOf="@id/et_id" />

        <EditText
            android:id="@+id/et_pw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/selector_user_input"
            android:hint="@string/pw_input"
            android:padding="14dp"
            android:inputType="textPassword"
            android:paddingVertical="13dp"
            android:textSize="14sp"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:paddingStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_pw"
            app:layout_constraintTop_toBottomOf="@id/tv_pw" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingVertical="12dp"
            android:text="@string/login"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:background="@drawable/rectangle_fill_pink_5"
            android:fontFamily="@font/noto_sans_kr_bold"
            app:layout_constraintBottom_toTopOf="@id/btn_sign_up"
            app:layout_constraintEnd_toEndOf="@id/et_pw"
            app:layout_constraintStart_toStartOf="@id/et_pw" />

        <TextView
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="41dp"
            android:text="@string/sign_up"
            android:textSize="12sp"
            android:fontFamily="@font/noto_sans_kr_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="@id/btn_login" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>